test/JDBC/expected/BABEL-328.out
--Script #1 - Creating some temporary objects to work on...
CREATE TABLE [Department]( 
   [DepartmentID] [int] NOT NULL PRIMARY KEY, 
   [Name] VARCHAR(250) NOT NULL, 
) ON [PRIMARY] 
GO

INSERT [Department] ([DepartmentID], [Name])  
VALUES (1, N'Engineering')
INSERT [Department] ([DepartmentID], [Name])  
VALUES (2, N'Administration')
INSERT [Department] ([DepartmentID], [Name])  
VALUES (3, N'Sales')
INSERT [Department] ([DepartmentID], [Name])  
VALUES (4, N'Marketing')
INSERT [Department] ([DepartmentID], [Name])  
VALUES (5, N'Finance')
GO
~~ROW COUNT: 1~~

~~ROW COUNT: 1~~

~~ROW COUNT: 1~~

~~ROW COUNT: 1~~

~~ROW COUNT: 1~~


CREATE TABLE [Employee]( 
   [EmployeeID] [int] NOT NULL PRIMARY KEY, 
   [FirstName] VARCHAR(250) NOT NULL, 
   [LastName] VARCHAR(250) NOT NULL, 
   [DepartmentID] [int] NOT NULL REFERENCES [Department](DepartmentID), 
) ON [PRIMARY] 
GO
 
INSERT [Employee] ([EmployeeID], [FirstName], [LastName], [DepartmentID]) 
VALUES (1, N'Orlando', N'Gee', 1 ) 
INSERT [Employee] ([EmployeeID], [FirstName], [LastName], [DepartmentID]) 
VALUES (2, N'Keith', N'Harris', 2 ) 
INSERT [Employee] ([EmployeeID], [FirstName], [LastName], [DepartmentID]) 
VALUES (3, N'Donna', N'Carreras', 3 ) 
INSERT [Employee] ([EmployeeID], [FirstName], [LastName], [DepartmentID]) 
VALUES (4, N'Janet', N'Gates', 3 ) 
GO
~~ROW COUNT: 1~~

~~ROW COUNT: 1~~

~~ROW COUNT: 1~~

~~ROW COUNT: 1~~


--Script #2 - CROSS APPLY and INNER JOIN
SELECT * FROM Department D 
CROSS APPLY 
   ( 
   SELECT * FROM Employee E 
   WHERE E.DepartmentID = D.DepartmentID 
   ) A 
GO
~~START~~
int#!#varchar#!#int#!#varchar#!#varchar#!#int
1#!#Engineering#!#1#!#Orlando#!#Gee#!#1
2#!#Administration#!#2#!#Keith#!#Harris#!#2
3#!#Sales#!#3#!#Donna#!#Carreras#!#3
3#!#Sales#!#4#!#Janet#!#Gates#!#3
~~END~~

 
SELECT * FROM Department D 
INNER JOIN Employee E ON D.DepartmentID = E.DepartmentID 
GO
~~START~~
int#!#varchar#!#int#!#varchar#!#varchar#!#int
1#!#Engineering#!#1#!#Orlando#!#Gee#!#1
2#!#Administration#!#2#!#Keith#!#Harris#!#2
3#!#Sales#!#3#!#Donna#!#Carreras#!#3
3#!#Sales#!#4#!#Janet#!#Gates#!#3
~~END~~


--Script #3 - OUTER APPLY and LEFT OUTER JOIN
SELECT * FROM Department D 
OUTER APPLY 
   ( 
   SELECT * FROM Employee E 
   WHERE E.DepartmentID = D.DepartmentID 
   ) A 
GO
~~START~~
int#!#varchar#!#int#!#varchar#!#varchar#!#int
1#!#Engineering#!#1#!#Orlando#!#Gee#!#1
2#!#Administration#!#2#!#Keith#!#Harris#!#2
3#!#Sales#!#3#!#Donna#!#Carreras#!#3
3#!#Sales#!#4#!#Janet#!#Gates#!#3
5#!#Finance#!#<NULL>#!#<NULL>#!#<NULL>#!#<NULL>
4#!#Marketing#!#<NULL>#!#<NULL>#!#<NULL>#!#<NULL>
~~END~~

 
SELECT * FROM Department D 
LEFT OUTER JOIN Employee E ON D.DepartmentID = E.DepartmentID 
GO
~~START~~
int#!#varchar#!#int#!#varchar#!#varchar#!#int
1#!#Engineering#!#1#!#Orlando#!#Gee#!#1
2#!#Administration#!#2#!#Keith#!#Harris#!#2
3#!#Sales#!#3#!#Donna#!#Carreras#!#3
3#!#Sales#!#4#!#Janet#!#Gates#!#3
5#!#Finance#!#<NULL>#!#<NULL>#!#<NULL>#!#<NULL>
4#!#Marketing#!#<NULL>#!#<NULL>#!#<NULL>#!#<NULL>
~~END~~


--Script #4 - APPLY with table-valued function 
CREATE FUNCTION dbo.fn_GetAllEmployeeOfADepartment(@DeptID AS INT)  
RETURNS TABLE 
AS 
RETURN 
   ( 
   SELECT * FROM Employee E 
   WHERE E.DepartmentID = @DeptID 
   ) 
GO
 
SELECT * FROM Department D 
CROSS APPLY dbo.fn_GetAllEmployeeOfADepartment(D.DepartmentID) 
GO
~~START~~
int#!#varchar#!#int#!#varchar#!#varchar#!#int
1#!#Engineering#!#1#!#Orlando#!#Gee#!#1
2#!#Administration#!#2#!#Keith#!#Harris#!#2
3#!#Sales#!#3#!#Donna#!#Carreras#!#3
3#!#Sales#!#4#!#Janet#!#Gates#!#3
~~END~~

 
SELECT * FROM Department D 
OUTER APPLY dbo.fn_GetAllEmployeeOfADepartment(D.DepartmentID) 
GO
~~START~~
int#!#varchar#!#int#!#varchar#!#varchar#!#int
1#!#Engineering#!#1#!#Orlando#!#Gee#!#1
2#!#Administration#!#2#!#Keith#!#Harris#!#2
3#!#Sales#!#3#!#Donna#!#Carreras#!#3
3#!#Sales#!#4#!#Janet#!#Gates#!#3
4#!#Marketing#!#<NULL>#!#<NULL>#!#<NULL>#!#<NULL>
5#!#Finance#!#<NULL>#!#<NULL>#!#<NULL>#!#<NULL>
~~END~~


DROP FUNCTION dbo.fn_GetAllEmployeeOfADepartment
GO

--Script #5 - Regression test to make sure CROSS/OUTER are still parsed correctly
--These calls should return an error
SELECT * FROM Department D
CROSS Employee E
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near 'Employee' at line 4 and character position 6)~~


SELECT * FROM Department D
OUTER Employee E
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near 'Employee' at line 2 and character position 6)~~


DROP TABLE [Employee]
GO
DROP TABLE [Department]
GO
